tests/semantics/illegal/many-errors.dcf
extern random();
extern srandom();
extern printf();
// a quicksort program.  set the "length" parameter in main() to the
// desired size of the sorted array.  if you want to sort an array
// bigger than 100 elements, you'll also need to adjust the declaration
// of the global array A.
int A[100];
int length, b[0]; // error
bool A() {} // 2 errors
int partition ( int p, int r ) {
  int x, i, j, t;
  int z;
  bool x[1]; // error
  x = A[p];
  i = p - 1;
  j = r + 1;
  for ( z = 0; z < length * length ; z += 1) {
    int a;
    j = j - 1;
    for ( a = 0; a < length ; a += 1 ) {
      if ( A[j] <= x ) {
        break;
      }
      j = j - 1;
    }
    for ( a = i + 1; a < length ; a += 1 ) {
      if ( A[a] >= x ) {
        i = a;
        break;
      }
    }
    if ( i < j ) {
      t = A[i];
      A[i] = A[j];
      A[j] = t;
    }
    else {
      return j;
    }
  }
  return -1;
}
void quicksort ( int p, int r ) {
  int q[1]; // causes errors below
  if ( p < r ) {
    q = partition ( p, r );
    quicksort ( p, q );
    quicksort ( q+1, r );
  }
}
void main ( ) {
  int temp, i;
  length = 10;
  // adjust for sort length
  printf ( "creating random array of %d elements\n", length );
  srandom ( 17 , "foo" ); // probably runtime error
  for ( i = 0 ; i < length ; i += 1 ) {
    temp = random ( );
    A[i] = temp;
  }
  printf ( "\nbefore sort:\n" );
  for ( i = 0 ; i - length ; i += true ) { // 2 errors
    printf ( "%d\n", A[i && 0] ); // error
  }
  quicksort ( "string" , length - 1 ); // error
  printf ( "\nafter sort\n" );
  for ( i = 0 ; i < length ; i += 1 ) {
    printf ( "%d\n", A[i] );
  }
}
